{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 59,
  "lineage": "291c1878-709a-0144-68d4-8a1b97597f0e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:535999436060:security-group/sg-0d7e9bdf1741cf1cc",
            "description": "Postgres access from app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d7e9bdf1741cf1cc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Postgres from app",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06f64cedb42fecc0b"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-postgres-sg",
            "name_prefix": "",
            "owner_id": "535999436060",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-postgres-sg"
            },
            "tags_all": {
              "Name": "rds-postgres-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e063e2f51c51cc8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "535999436060",
            "id": "sg-0d7e9bdf1741cf1cc",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:535999436060:security-group/sg-06f64cedb42fecc0b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f64cedb42fecc0b",
            "ingress": [],
            "name": "lambda-sg",
            "name_prefix": "",
            "owner_id": "535999436060",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Lambda SG"
            },
            "tags_all": {
              "Name": "Lambda SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e063e2f51c51cc8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "535999436060",
            "id": "sg-06f64cedb42fecc0b",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:535999436060:subnet/subnet-09ebda5e21afbfa49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ebda5e21afbfa49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535999436060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-03e063e2f51c51cc8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "535999436060",
            "id": "subnet-09ebda5e21afbfa49",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:535999436060:subnet/subnet-02a2a9ca7874960a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a2a9ca7874960a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535999436060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-03e063e2f51c51cc8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "535999436060",
            "id": "subnet-02a2a9ca7874960a2",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:535999436060:vpc/vpc-03e063e2f51c51cc8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fcac0f7c950a68e0",
            "default_route_table_id": "rtb-0d2df7d9ebf91ff90",
            "default_security_group_id": "sg-06bbf3aea251287dd",
            "dhcp_options_id": "dopt-0d5314d436a6782f1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03e063e2f51c51cc8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d2df7d9ebf91ff90",
            "owner_id": "535999436060",
            "region": "us-east-2",
            "tags": {
              "Name": "app-vpc"
            },
            "tags_all": {
              "Name": "app-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "535999436060",
            "id": "vpc-03e063e2f51c51cc8",
            "region": "us-east-2"
          }
        }
      ]
    }
  ]
}